--- a/Unidad 1 - Práctica 2/Ejercicio 4/Ejercicio 4.csproj
+++ b/Unidad 1 - Práctica 2/Ejercicio 4/Ejercicio 4.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>Ejercicio_4</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
+  </ItemGroup>
+
 </Project>
